Fix contact form positioning, not working properly on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,7 @@ hr {
 }
 
 .signup-form {
-    margin: 150px 10% 0 0;
+    margin: 75px 10% 0 0;
     color: var(--main-txt2);
     background-color: var(--signup-bg);
     max-width: 400px;
